objects/Custom_Object_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Email__c</fullName>
        <businessOwnerUser>kainaz.p@autorabit.com.esdevorg</businessOwnerUser>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Text_Label__c</fullName>
        <label>Text Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Kainaz Test</label>
</CustomObject>